force-app/main/default/objects/Technical_Review__c/Technical_Review__c.object-meta.xml
<CustomObject>
    <label>Technical Review</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Technical Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>