force-app/main/default/objects/Technical_Review__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <defaultValue>(&quot;SMB Consulting&quot;)</defaultValue>
    <label>Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional Implementation Support - Northeast</fullName>
            </value>
            <value>
                <fullName>Regional Implementation Support - Southeast</fullName>
            </value>
            <value>
                <fullName>Regional Implementation Support - Central</fullName>
            </value>
            <value>
                <fullName>Regional Implementation Support - Texas</fullName>
            </value>
            <value>
                <fullName>Regional Implementation Support - West</fullName>
            </value>
            <value>
                <fullName>SMB Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>