force-app/main/default/objects/Technical_Review__c/fields/CPQQuote__c.field-meta.xml
<CustomField>
    <fullName>CPQQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Technical Reviews</relationshipLabel>
    <relationshipName>Technical_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>