force-app/main/default/objects/Technical_Review__c/fields/Sales_Survey__c.field-meta.xml
<CustomField>
    <fullName>Sales_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Survey</label>
    <referenceTo>CPQ_Sales_Survey__c</referenceTo>
    <relationshipLabel>Technical Reviews</relationshipLabel>
    <relationshipName>Technical_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>